# twitter_stock_client

./: .gitignore  .merlin  Makefile  README.md  _tags  algo.ml  algoUtils.ml  author.ml  author.mli  config.json  config.ml  curl.ml  email.ml  json_writer.ml  main.ml  manager.ml  parser.ml  requirements.opam  sentiment.ml  stock.ml  test.ml  trade.ml  trader.ml  twitter.ml
